src/objects/Coaching_Session__c.object
<CustomObject>
    <fields>
        <fullName>Targeted_Skill_or_Behaviour__c</fullName>
        <label>Targeted Skill or Behaviour</label>
        <picklist>
            <controllingField>Career_Path_Level__c</controllingField>
            <picklistValues>
                <fullName>ADAPTOR process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Becoming a Business Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building the Sales Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Trusting Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching the Sales Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuous Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contributing to team success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating a Service Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devising Sales Approaches and Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expanding and Advancing Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Impact Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiating Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Making Sales Operations Decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passion for Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raising the Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Disposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Opportunity Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting Sales Unit Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stress Tolerance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustaining Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/Clinical Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Standards</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Territory_Management_Skills_Focus__c</fullName>
        <inlineHelpText>Use this field to describe the specific area of territory management skill you would like to focus on for this coaching session</inlineHelpText>
        <label>Territory Management Skills Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>W_WHAT_S_NEXT__c</fullName>
        <inlineHelpText>Now move from inspiration to implementation. Once options are explored, specific actions can be designed. The coachee commits to a specific set of actions, along with milestones and check-in points as needed. The coach may offer support as necessary.</inlineHelpText>
        <label>W - What&apos;s Next</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Coaching Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Coach_Name__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>Call_Objectives__c</columns>
        <columns>Coaching_Day_Date__c</columns>
        <columns>Sales_Manager_Review_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinates>ANZ_SJM_Administrator</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lisa_Croker_s_Coaching_days</fullName>
        <columns>NAME</columns>
        <columns>Coaching_Day_Date__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>Primary_Call_Objective__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Coach_Name__c</field>
            <operation>equals</operation>
            <value>lisa croker</value>
        </filters>
        <label>Lisa Croker&apos;s Coaching days</label>
        <sharedTo>
            <role>ANZ_SJM_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NSW_Coaching</fullName>
        <columns>NAME</columns>
        <columns>Coaching_Day_Date__c</columns>
        <columns>Targeted_Skill_or_Behaviour__c</columns>
        <columns>Manager_Follow_up_Commitments__c</columns>
        <columns>Reps_Follow_up_Commitments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Hickson,Russell,Rimmer,wolthers,marando</value>
        </filters>
        <label>NSW Coaching</label>
        <sharedTo>
            <role>ANZ_SJM_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Qld_Coaching</fullName>
        <columns>NAME</columns>
        <columns>Coaching_Day_Date__c</columns>
        <columns>Targeted_Skill_or_Behaviour__c</columns>
        <columns>Manager_Follow_up_Commitments__c</columns>
        <columns>Reps_Follow_up_Commitments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>heathcote,evans,wicking,kudelka</value>
        </filters>
        <label>Qld Coaching</label>
        <sharedTo>
            <role>ANZ_SJM_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SA_Coaching</fullName>
        <columns>Sales_Coach_Name__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>Coaching_Day_Date__c</columns>
        <columns>Targeted_Skill_or_Behaviour__c</columns>
        <columns>Manager_Follow_up_Commitments__c</columns>
        <columns>Reps_Follow_up_Commitments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Coach_Name__c</field>
            <operation>equals</operation>
            <value>tina collins</value>
        </filters>
        <label>SA Coaching</label>
        <sharedTo>
            <role>ANZ_SJM_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tina_s_Coaching</fullName>
        <columns>Coaching_Day_Date__c</columns>
        <columns>NAME</columns>
        <columns>Call_Objective_Rating__c</columns>
        <columns>Sales_Coach_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>collins</value>
        </filters>
        <label>Tina&apos;s Coaching</label>
        <sharedTo>
            <role>ANZ_SJM_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WA_Coaching</fullName>
        <columns>Sales_Coach_Name__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>Coaching_Day_Date__c</columns>
        <columns>Targeted_Skill_or_Behaviour__c</columns>
        <columns>Manager_Follow_up_Commitments__c</columns>
        <columns>Reps_Follow_up_Commitments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>innocent</value>
        </filters>
        <label>WA Coaching</label>
        <sharedTo>
            <role>ANZ_SJM_Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Coaching Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coaching Sessions</pluralLabel>
    <recordTypes>
        <fullName>Coaching_Session</fullName>
        <active>true</active>
        <label>Coaching Session</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coaching_Session_Complete</fullName>
        <active>true</active>
        <label>Coaching Session Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>Post_Call_Coaching_Session</fullName>
        <active>true</active>
        <label>Post Call Coaching Session</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Manager_Coaching</fullName>
        <active>true</active>
        <label>Sales Manager Coaching</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Team_Coaching</fullName>
        <active>true</active>
        <label>Technical Team Coaching</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>